--- a/Portfolio/Code/index.html
+++ b/Portfolio/Code/index.html
@@ -37,7 +37,7 @@
     <div class="container">
     <div class="row">
               <div class="about-col-1">
-                <img src="C:\Users\tragu\Downloads\Portfolio--main\Portfolio--main\Portfolio--main\images-2\rogul1.jpg">
+                <img src="\images-2\rogul1.jpg">
               </div>
               <div class="about-col-2">
                 <h1 class="sub-title">Career Objective</h1>
@@ -129,7 +129,7 @@
         <h1 class="sub-title">My Works</h1>
         <div class="work-list">
             <div class="work">
-                <img src="C:\Users\tragu\Downloads\Portfolio--main\Portfolio--main\Portfolio--main\images-2\sheep.png">
+                <img src="\images-2\sheep.png">
                 <div class="layer">
                     <h3>ANIMAL DETECTION IN FARMLAND</h3>
                     <p>This is Animal detection project,
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="C:\Users\tragu\Downloads\Portfolio--main\Portfolio--main\Portfolio--main\images-2\nanotrack.png">
+                <img src="\images-2\nanotrack.png">
                 <div class="layer">
                     <h3> NANOTRACK</h3>
                     <p>NanoTrack is a lightweight object detection and tracking package designed for use with YOLO. It provides efficient tracking algorithms with minimal resource requirements.</p>
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images-2/work-3.png">
+                <img src="\images-2\work-3.png">
                 <div class="layer">
                     <h3>SMART FACE ATTENDANCE SYSTEM</h3>
                     <p>which helps to take attendance in the classroom </p>
@@ -179,7 +179,7 @@
                     <a href=""><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/ragul-t-?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <a href="C:\Users\tragu\Downloads\ragul new resume.pdf" download class="btn btn2">Download my resume</a>
+                <a href="\ragul new resume.pdf" download class="btn btn2">Download my resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
